# hs-todo

./: .envrc  .gitignore  LICENSE  README.md  default.nix  hs-snake.cabal  hs-todo.cabal
res/: example.txt
src/: Main.hs  TodoIO.hs  TodoItem.hs  TodoUI.hs
src/Todo/: FixedStrings.hs  IO.hs  Item.hs  UI.hs
