name:                hs-snake
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Maximilian Mayer
maintainer:          max@maxmayer.xyz
copyright:           Maximilian Mayer
build-type:          Simple
cabal-version:       >=1.10

executable hs-snake
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
