name:                hs-todo
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Maximilian Mayer
maintainer:          max@maxmayer.xyz
copyright:           2020 Maximilian Mayer
build-type:          Simple
cabal-version:       >=1.10

executable hs-todo
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TodoUI
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.12 && <4.13
                     , brick
                     , directory
                     -- , regex-pcre
                     , vector
                     , vty
  default-language:    Haskell2010
